# python-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Jenkinsfile  Makefile  README.md  Taskfile.yml  config.py  dev-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml
src/: __init__.py  app-conf.toml  config.py  logging-conf.toml  main.py
src/app/: config.py
src/python_template/: __init__.py  app-conf.toml  config.py  logging-conf.toml  main.py
tests/: test_app.py  test_config.py  test_logger.py  test_timer.py
