[project]
name = "python_template"
dependencies = [
    "pytest",
    "pytest-cov",
    "ruff",
]
description = "Add a short description here"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
[tool.coverage.run]
source = ["src"]
[tool.hatch.metadata]
allow-direct-references = true
[tool.mypy]
ignore_missing_imports = true
[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95 --verbose"
testpaths = ["tests"]
[tool.rye]
managed = true
