[project]
name = "python_template"
dependencies = [
    "pydantic",
    "python-json-logger",
    "pydantic-settings>=2.0.2",
]
description = "Add a short description here"
readme = "README.md"
requires-python = ">= 3.11.3"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.black]
line-length = 88
[tool.coverage.run]
omit = ["src/*/main.py"]
source = ["src"]
[tool.hatch.metadata]
allow-direct-references = true
[tool.mypy]
ignore_missing_imports = true
[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 95 --verbose"
testpaths = ["tests"]
[tool.ruff]
select = ["A", "B", "E", "F", "I", "N", "W", "PTH"]
[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.278",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
